Revision history for HTML::Mason.

An HTML version of this file, complete with links to documentation, is
available at http://www.masonhq.com/code/history.html.

** denotes an incompatible change

1.40

[ BUG FIXES ]

- Attempting to set multiple cookies when running under CGIHandler
  failed. Patch by Andrej Czapszys. RT #33710.


1.39  Jan 30, 2008

[ ENHANCEMENTS ]

- CHI may now be used as the backend for $m->cache as an updated
  alternative to Cache::Cache.  Among other things, this facilitates
  easy use of Cache::FastMmap and memcached for data
  caching. Cache::Cache is still the default for now, and is still
  listed as a prereq for Mason.


1.38  Dec 20, 2007

[ BUG FIXES ]

- (Hopefully) fixed a problem where the cpan shell thought that Mason
  needed mod_perl1 as a prereq when it was trying to require a newish
  version of mod_perl2.

- If you called $r->send_http_header() explicitly in a component under
  mod_perl 1.x, headers would end up getting sent again once the
  component finished executing. Reported by Brett Gardner.

- Component call with content end tags could not span multiple
  lines. Fixing this makes it consistent with the opening tag. Patch
  by Alex Robinson.

- Includes a possible fix for a test failure in 10-cache.t. This
  failure is a problem in the test code, not the Mason core code.


1.37  Sep 6, 2007

[ BUG FIXES ]

- Mason could send the HTTP headers twice under mod_perl 1.x when
  making a request for a directory path that was handled by a
  dhandler. Reported by David Beaudet.

- If you set the Content-Type header in a handler sub before passing
  control to Mason via ApacheHandler, this value was overwritten if
  the request was for a directory path.

[ ENHANCEMENTS ]

- Make t/08-ah.t and t/16-live-cgi.t more verbose about why they are
  skipping tests when they do so. Based on a patch from
  C.J. Adams-Collier.


1.36  Jun 10, 2007

[ BUG FIXES ]

- If a component with content call ending tag appeared inside a